--- a/src/main/webapp/css/accueil.css
+++ b/src/main/webapp/css/accueil.css
@@ -8,9 +8,6 @@
 }
 
 body {
-	margin-top: 25px; 
-	margin-left : 100px;
-	margin-right: 100px;
-	margin-left: 100px;
+	width : 100%;
     background: #67BE4B;
 }
