--- a/src/main/webapp/css/profil.css
+++ b/src/main/webapp/css/profil.css
@@ -1,31 +1,42 @@
-
 body{
     background: #67BE4B;
 }
 
-#profil_list{
-
-	text-align:justify;
-	list-style: none;
-	font-size : 20px;
-	line-height: 3em;
-	margin-top : 50px;
-	column-count:2;
-
-}
-
 #container{
-    width:700px;
+	position : center;
+    width:900px;
     margin:0 auto;
-    padding: 10px;
+    margin-top:25px; 
+    margin-bottom:25px; 
     border: 1px solid #f1f1f1;
     background: #fff;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-
-
-
 }
 
+#container2{
+	position : center;
+    width:700px;
+    margin:0 auto;
+    margin-top:10%; 
+    margin-bottom:10%; 
+    text-align : justify;
+    line-height: 3em;
+}
+
+/* Bordered form */
+
+#container h1{
+	margin-left : 125px;
+	width : 25%;
+    margin: 0 auto;
+}
+
+h1{
+	margin-bottom : 100px;
+}
+
+
+/* Set a style for all buttons */
 input[type=submit] {
     background-color: #53af57;
     color: white;
@@ -33,13 +44,50 @@ input[type=submit] {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-	width : 50%
+    width: 100%;
 
-} 
+}
+
 input[type=submit]:hover {
-
     background-color: white;
     color: #53af57;
     border: 1px solid #53af57;
 }
+#error{
+	color: red;
+	 /* Animation de vibration sur le text de l'erreur */
+  animation: shake 0.5s;
 
+}
+
+.main-div {
+  	position: relative;
+  	border: 1px solid black;
+}
+
+.main-div-overlay-text {
+	
+  	position: absolute;
+  	left: 10px;
+  	right: 0;
+  	margin-top : 25px;
+  	margin: auto;
+  	top:-30px;
+  	text-align : justify;
+}
+
+label{
+	
+	width: 150px;
+	display : block;
+	float : left;
+	margin-left : 125px;
+}
+
+#list1{
+	margin-bottom : 15px;
+}
+
+input[type=text] {
+	width : 300px;
+}
