--- a/src/main/webapp/css/accueil.css
+++ b/src/main/webapp/css/accueil.css
@@ -1,13 +1,48 @@
-#article-container {
-	border: 1px solid black;
-	margin : 100px;
-}
-
-#article {
-	border: 1px solid black;
-}
 
 body {
 	width : 100%;
-    background: #67BE4B;
+    background: #D1F0FF;
+}
+	
+
+#article-container {
+	text-align : center;
+	padding-top : 50px;
+	margin : 100px;
+	border: 1px solid #f1f1f1;
+    background: #fff;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+#article {
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+	width : 300px;
+	height : 300px;	
+	padding : 5px;
+	margin : 20px;
+	line-height: 2em;
+	justify-content: flex-start; 
+	
+}
+
+
+input[type=submit] {
+    background-color: #063758;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+     position : relative;
+  	bottom : 5px;
+
+}
+
+
+
+input[type=submit]:hover {
+    background-color: white;
+    color: #063758;
+    border: 1px solid #063758;
 }
