--- a/src/main/webapp/css/navbar.css
+++ b/src/main/webapp/css/navbar.css
@@ -8,17 +8,28 @@
 .navbar {
     font-size: 18px;
     padding-bottom: 10px;
-    background-color : black;
+    background-color : white ;
     color : white;
     text-decoration:none; 
+    margin-bottom : 100px;
 }
 
+a:link 
+{ 
+ text-decoration:none; 
+} 
+
+link{
+	text-decoration:none; 
+}
 .main-nav {
+	text-decoration:none; 
     list-style-type: none;
     display: none;
 }
 
 .nav-links, .logo, .material-icons {
+	
     text-decoration: none;
     color: ghostwhite;
     opacity: 0.6;
@@ -33,15 +44,14 @@
 .logo {
 	text-decoration: none;
     display: flex;
-    font-size: 24px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 30px;
 }
 
 .logo img {
-    height: 50px;
-    width: 50px;
-    border-radius: 50px;
+    height: 13%;
+    width: 13%;
+    
 }
 
 .logo p {
@@ -72,11 +82,14 @@
         padding-bottom: 0;
         height: 70px;
         align-items: center;
+        text-decoration:none; 
     }
     .toggle-nav {
+    text-decoration:none; 
         display: none;
     }
     .main-nav {
+    text-decoration:none; 
         display: flex;
         justify-content: end;
         margin-right: 30px;
@@ -85,10 +98,12 @@
         margin: 0;
     }
     .nav-links {
+    text-decoration:none; 
         margin-left: 20px;
     }
     .logo {
         margin-top: 0;
+        
     }
 }
 
