--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #67BE4B;
+    background: #D1F0FF;
 }
 
 #container{
@@ -25,9 +25,11 @@ body{
 
 /* Bordered form */
 
-#container h1{
+h1{
+	text-align : center;
+	margin-top : 75px;
 	margin-left : 125px;
-	width : 25%;
+	width : 50%;
     margin: 0 auto;
 }
 
@@ -36,7 +38,7 @@ h1{
 }
 
 input[type=submit] {
-    background-color: #53af57;
+    background-color: #063758;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -48,8 +50,8 @@ input[type=submit] {
 
 input[type=submit]:hover {
     background-color: white;
-    color: #53af57;
-    border: 1px solid #53af57;
+    color: #063758;
+    border: 1px solid #063758;
 }
 #error{
 	color: red;
