--- a/src/main/webapp/css/accueil.css
+++ b/src/main/webapp/css/accueil.css
@@ -2,29 +2,37 @@
 body {
 	width : 100%;
     background: #D1F0FF;
+   font-family : Courier New, Courier, Prestige, monospace;
 }
 	
 
 #article-container {
-	text-align : center;
-	padding-top : 50px;
-	margin : 100px;
+	padding : 50px;
+	margin : auto;
+	position :relative;
 	border: 1px solid #f1f1f1;
     background: #fff;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    width : 80%;
+    margin-bottom:100px;
+    
+
 }
 
 #article {
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-	width : 300px;
-	height : 300px;	
-	padding : 5px;
+	width : auto;
+	height : auto;	
+	padding : 10px;
 	margin : 20px;
 	line-height: 2em;
-	justify-content: flex-start; 
-	
+    display: inline-block;	
 }
 
+h2,h3{
+	margin-bottom : 50px;
+	width: 100%;
+}
 
 input[type=submit] {
     background-color: #063758;
@@ -34,7 +42,7 @@ input[type=submit] {
     border: none;
     cursor: pointer;
     width: 100%;
-     position : relative;
+    position : relative;
   	bottom : 5px;
 
 }
