--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,7 +1,20 @@
+
+:root {
+    --primary-color: rgba(36, 47, 64) ;
+    --secondary-color: #fff;
+    --light-grey: #ccc;
+    --border: #467599;
+    --light-blue:#3b90e3; 
+    
+}
+
+
 body{
     background: #D1F0FF;
     font-family : Courier New, Courier, Prestige, monospace;
 }
+
+
 
 #container{
 	position : center;
@@ -88,3 +101,59 @@ label{
 input[type=text] {
    width : 250px;
 }
+
+
+.search-bar {
+    margin:0px;
+    padding: 20px;
+    width: 100%;
+    display: inline-flex;
+    background-color: #063758;
+    justify-content: center;
+}
+
+.search-box {
+    display: inline-flex;
+    margin: 0px 5px;
+}
+
+.search{
+    width:50vw;
+    padding: 10px;
+    font-size: 1rem;
+}
+
+.search-btn {
+    background-color: #063758;
+    color: var(--secondary-color);
+    border: 2px var(--light-grey) solid;
+    margin: 0px;
+}
+
+.search-btn:hover {
+    background-color: var(--light-blue);
+}
+
+.search, .search-btn, .categories{
+    outline-style: none;
+}
+img {
+    height: 50%;
+    width: 50%;
+}
+
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
