--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -45,11 +45,9 @@ h1{
 	margin-left : 125px;
 	width : 50%;
     margin: 0 auto;
+    margin-bottom : 100px;
 }
 
-h1{
-	margin-bottom : 100px;
-}
 
 input[type=submit] {
     background-color: #063758;
@@ -75,7 +73,7 @@ input[type=submit]:hover {
 
 }
 .main-div {
-  	position: relative;
+	padding : 15px;
   	border: 1px solid #f1f1f1;
     background: #fff;
     margin-bottom : 10px;
@@ -91,12 +89,10 @@ label{
 	width: 150px;
 	display : block;
 	float : left;
-	margin-left : 10px;
+	margin : auto;
+	text-align:justify;
 }
 
-#list1{
-	margin-bottom : 15px;
-}
 
 input[type=text] {
    width : 250px;
@@ -157,3 +153,104 @@ img {
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
+a {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+    /* Navbar*/
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+        display: none;
+    }
+  
+    /* Hide scrollbar for IE, Edge and Firefox */
+body {
+        -ms-overflow-style: none;  /* IE and Edge */
+         scrollbar-width: none;  /* Firefox */
+    }     
+.input-field {
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center; 
+ }
+
+.input-field label {
+    width: 200px;
+    margin-right: 10px;
+    font-size: 1.2rem;
+ }
+
+.input-field .input {
+     width: 100%;
+     outline: none;
+     border: 1px solid #d5dbd9;
+     border-radius: 3px;
+     font-size: 15px;
+     padding: 8px 10px;
+ }
+
+.input-field .input:focus {
+     border: 1px solid var(--border);
+ }
+
+.btn-sorter {
+     margin-top: 30px;
+     display: flex;
+     justify-content: space-around;
+     padding: 20px 10px;
+ }
+
+.btn {
+    width: 100%;
+    border-radius: 10px;
+    padding: 20px 25px;
+    font-size: 20px;
+    outline: none;
+ }
+
+.btn-login {
+    width: 100%;
+    border-radius: 10px;
+    margin: 10px 0px;
+    padding: 20px 25px;
+    font-size: 20px;
+    outline: none;
+ }
+
+.btn:hover {
+    cursor: pointer;
+ }
+
+.ssdm {
+    font-size: 1.2rem;
+ }
+
+.mdpo {
+     font-size: 1.2rem;
+ }
+
+input[type=radio] {
+    border: 1px solid #fff;
+    padding: 0.5em;
+    -webkit-appearance: none;
+  }
+
+
+table {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    margin-bottom: 20px;
+    border-spacing: 10px;
+}
+.recherche-achats{
+	
+}
+.recherche.mes.ventes{
+	
+}
