--- a/src/main/webapp/css/accueil.css
+++ b/src/main/webapp/css/accueil.css
@@ -30,6 +30,7 @@ body {
 }
 
 h2,h3{
+	margin-top : 50px;
 	margin-bottom : 50px;
 	width: 100%;
 }
@@ -54,3 +55,16 @@ input[type=submit]:hover {
     color: #063758;
     border: 1px solid #063758;
 }
+
+    /* Navbar*/
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+        display: none;
+    }
+  
+    /* Hide scrollbar for IE, Edge and Firefox */
+body {
+        -ms-overflow-style: none;  /* IE and Edge */
+         scrollbar-width: none;  /* Firefox */
+    }     
