Reparation Accueil Servlet + Deb Detail Achat

--- a/src/main/webapp/css/navbar.css
+++ b/src/main/webapp/css/navbar.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family : Courier New, Courier, Prestige, monospace;
+    
 }
 
 
@@ -12,20 +13,23 @@
     background-color : white ;
     color : white;
     text-decoration:none; 
+    display:inline-block;
 }
 
 a:link 
 { 
  text-decoration:none; 
+ display:inline-block;
 } 
 
 link{
 	text-decoration:none; 
+	display:inline-block;
 }
 .main-nav {
 	text-decoration:none; 
     list-style-type: none;
-    display: none;
+    display:inline-block;
 }
 
 .nav-links, .logo, .material-icons {
@@ -37,6 +41,7 @@ link{
 
 .main-nav li {
 	text-decoration: none;
+	display:inline-block;
     text-align: center;
     margin: 10px auto;
 }
@@ -108,8 +113,9 @@ link{
 }
 
 ul,li{
+	display:inline-block;
 	text-decoration: none;
-	float : right;
 	margin : 25px;
 	list-style: none;
 }
+
